--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,9 @@
 <div class="movies">
     <h1 class="text-center">{{AppController.title}}</h1>
-    <search-bar></search-bar>
+    <search-bar
+        searchText="'sdsd'"
+        clearSearchText="AppController.clearSearchText()"
+    ></search-bar>
+
+        {{AppController.searchText}}
 </div>
