Search bar service was added

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,7 @@
 <div class="movies">
     <h1 class="text-center">{{AppController.title}}</h1>
     <search-bar
-        search-text="'sdsd'"
-        clear-search-text="AppController.clearSearchText()"
+        search-text="AppController.searchText"
+        movies="AppController.movies"
     ></search-bar>
-
-        {{AppController.searchText}}
 </div>
