--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,4 +4,5 @@
         search-text="AppController.searchText"
         movies="AppController.movies"
     ></search-bar>
+    <movies-list movies="AppController.movies"></movies-list>
 </div>
