--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,3 @@
-<div class="movies">
-    <h1 class="text-center">{{$ctrl.title}}</h1>
-    <search-bar
-        search-text="$ctrl.searchText"
-        movies="$ctrl.movies"
-    ></search-bar>
-    <movies-list movies="$ctrl.movies"></movies-list>
+<div class="main">
+    <ui-view></ui-view>
 </div>
