--- a/src/movies-list/movies-list.css
+++ b/src/movies-list/movies-list.css
@@ -1,3 +1,12 @@
 .movie {
   width: 300px;
 }
+
+.movie-poster {
+  max-width: 185px;
+  min-height: 287px;
+}
+
+.movie-poster img {
+  max-width: 100%;
+}
